--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@ant-design/icons": "^6.1.0",
     "antd": "^5.27.5",
     "firebase": "^12.4.0",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.4",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
