search done cepat, 100k data test

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@ant-design/icons": "^6.1.0",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
-    "antd": "^5.27.5",
+    "antd": "^5.27.6",
     "firebase": "^12.4.0",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
@@ -21,7 +21,8 @@
     "react-dom": "^19.1.1",
     "react-pdf": "^10.2.0",
     "react-router-dom": "^7.9.4",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
