--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "firebase": "^12.4.0",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "keepalive-for-react": "^5.0.2",
     "react": "^19.1.1",
+    "react-activation": "^0.13.4",
     "react-dom": "^19.1.1",
     "react-pdf": "^10.2.0",
     "react-router-dom": "^7.9.4",
