--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "antd": "^5.27.6",
     "firebase": "^12.4.0",
+    "js-cookie": "^3.0.5",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "keepalive-for-react": "^5.0.2",
